--- a/AlgorithmGossip/MultiColorHanoiTower.htm
+++ b/AlgorithmGossip/MultiColorHanoiTower.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>Âù¦â¡B¤T¦âªe¤º¶ğ</title>
+  <title>é›™è‰²ã€ä¸‰è‰²æ²³å…§å¡”</title>
 </head>
 
 
@@ -51,68 +51,68 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;Âù¦â¡B¤T¦âªe¤º¶ğ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;é›™è‰²ã€ä¸‰è‰²æ²³å…§å¡”</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-Âù¦âªe¤º¶ğ»P¤T¦âªe¤º¶ğ¬O¥Ñ¤§«e©Ò¤¶²Ğ¹Lªºªe¤º¶ğ³W«h­l¥Í¦Ó¨Ó¡AÂù¦âªe¤º¶ğªº¥Øªº¬O±N¤U¹Ï¥ª¤Wªº¶êÀô¦ì¸m¸g²¾°Ê¦¨¬°¥k¤Uªº¶êÀô¦ì¸m¡G <br>
-<div style="text-align: center;"><img style="width: 381px; height: 141px;" alt="¦h¦âªe¤º¶ğ" title="¦h¦âªe¤º¶ğ" src="images/multiColorHanoiTower-1.jpg"><br>
+<h2>èªªæ˜</h2>
+é›™è‰²æ²³å…§å¡”èˆ‡ä¸‰è‰²æ²³å…§å¡”æ˜¯ç”±ä¹‹å‰æ‰€ä»‹ç´¹éçš„æ²³å…§å¡”è¦å‰‡è¡ç”Ÿè€Œä¾†ï¼Œé›™è‰²æ²³å…§å¡”çš„ç›®çš„æ˜¯å°‡ä¸‹åœ–å·¦ä¸Šçš„åœ“ç’°ä½ç½®ç¶“ç§»å‹•æˆç‚ºå³ä¸‹çš„åœ“ç’°ä½ç½®ï¼š <br>
+<div style="text-align: center;"><img style="width: 381px; height: 141px;" alt="å¤šè‰²æ²³å…§å¡”" title="å¤šè‰²æ²³å…§å¡”" src="images/multiColorHanoiTower-1.jpg"><br>
 <br>
-<div style="text-align: left;">¦Ó¤T¦âªe¤º¶ğ«h¬O±N¤U¹Ï¥ª¤Wªº¶êÀô¸g²¾°Ê¦¨¬°¥k¤Wªº¶êÀô¡G <br>
-<div style="text-align: center;"><img style="width: 381px; height: 141px;" alt="¦h¦âªe¤º¶ğ" title="¦h¦âªe¤º¶ğ" src="images/multiColorHanoiTower-2.jpg"><br>
+<div style="text-align: left;">è€Œä¸‰è‰²æ²³å…§å¡”å‰‡æ˜¯å°‡ä¸‹åœ–å·¦ä¸Šçš„åœ“ç’°ç¶“ç§»å‹•æˆç‚ºå³ä¸Šçš„åœ“ç’°ï¼š <br>
+<div style="text-align: center;"><img style="width: 381px; height: 141px;" alt="å¤šè‰²æ²³å…§å¡”" title="å¤šè‰²æ²³å…§å¡”" src="images/multiColorHanoiTower-2.jpg"><br>
 </div>
 <br>
 
-¦b²¾°Êªº¹Lµ{¤¤¡A¤@¼Ë¿í¦u¤j½L¥²¶·¦b¤p½L¤§¤Uªº³W«h¡A¦ÓÃC¦â¶¶§Ç«hµL­­¨î¡C 
-<h2> ¸Ñªk</h2>
+åœ¨ç§»å‹•çš„éç¨‹ä¸­ï¼Œä¸€æ¨£éµå®ˆå¤§ç›¤å¿…é ˆåœ¨å°ç›¤ä¹‹ä¸‹çš„è¦å‰‡ï¼Œè€Œé¡è‰²é †åºå‰‡ç„¡é™åˆ¶ã€‚ 
+<h2> è§£æ³•</h2>
 
-µL½×¬OÂù¦âªe¤º¶ğ©Î¬O¤T¦âªe¤º¶ğ¡A¨ä¸ÑªkÆ[©À»P¤§«e¤¶²Ğ¹Lªºªe¤º¶ğ¬OÃş¦üªº¡A¦P¼Ë¤]¬O¨Ï¥Î»¼°j¨Ó¸Ñ¡A¤£¹L³o¦¸»¼°j¸Ñªkªº¥Øªº¤£¦P¡A§Ú­Ì¥ı¨Ó¬İ¥u¦³¨â­Ó
-½Lªº±¡ªp¡A³o«ÜÂ²³æ¡A¥u­n±N²Ä¤@¬Wªº¶À¦â²¾°Ê¦Ü²Ä¤G¬W¡A¦Ó±µ¤U¨Ó²Ä¤@¬WªºÂÅ¦â²¾°Ê¦Ü²Ä¤T¬W¡C <br>
+ç„¡è«–æ˜¯é›™è‰²æ²³å…§å¡”æˆ–æ˜¯ä¸‰è‰²æ²³å…§å¡”ï¼Œå…¶è§£æ³•è§€å¿µèˆ‡ä¹‹å‰ä»‹ç´¹éçš„æ²³å…§å¡”æ˜¯é¡ä¼¼çš„ï¼ŒåŒæ¨£ä¹Ÿæ˜¯ä½¿ç”¨éè¿´ä¾†è§£ï¼Œä¸éé€™æ¬¡éè¿´è§£æ³•çš„ç›®çš„ä¸åŒï¼Œæˆ‘å€‘å…ˆä¾†çœ‹åªæœ‰å…©å€‹
+ç›¤çš„æƒ…æ³ï¼Œé€™å¾ˆç°¡å–®ï¼Œåªè¦å°‡ç¬¬ä¸€æŸ±çš„é»ƒè‰²ç§»å‹•è‡³ç¬¬äºŒæŸ±ï¼Œè€Œæ¥ä¸‹ä¾†ç¬¬ä¸€æŸ±çš„è—è‰²ç§»å‹•è‡³ç¬¬ä¸‰æŸ±ã€‚ <br>
 
 <br>
-¦A¨Ó¬O¥|­Ó½Lªº±¡ªp¡A­º¥ı¥²¶·¥Î»¼°j§¹¦¨¤U¹Ï¥ª¤W¦Ü¥k¤Uªº²¾°Ê¡G <br>
-<div style="text-align: center;"><img style="width: 378px; height: 137px;" alt="¦h¦âªe¤º¶ğ" title="¦h¦âªe¤º¶ğ" src="images/multiColorHanoiTower-3.jpg"></div>
+å†ä¾†æ˜¯å››å€‹ç›¤çš„æƒ…æ³ï¼Œé¦–å…ˆå¿…é ˆç”¨éè¿´å®Œæˆä¸‹åœ–å·¦ä¸Šè‡³å³ä¸‹çš„ç§»å‹•ï¼š <br>
+<div style="text-align: center;"><img style="width: 378px; height: 137px;" alt="å¤šè‰²æ²³å…§å¡”" title="å¤šè‰²æ²³å…§å¡”" src="images/multiColorHanoiTower-3.jpg"></div>
 <br>
-±µ¤U¨Ó³Ì©³¼hªº´N¤£¥ÎºŞ¥¦­Ì¤F¡A¦]¬°¥¦­Ì¤w¸g´N©w¦ì¡A¥u­n¦A³B²z²Ä¤@¬Wªº¤W­±¨â­Ó½L¤l´N¥i¥H¤F¡C<br>
+æ¥ä¸‹ä¾†æœ€åº•å±¤çš„å°±ä¸ç”¨ç®¡å®ƒå€‘äº†ï¼Œå› ç‚ºå®ƒå€‘å·²ç¶“å°±å®šä½ï¼Œåªè¦å†è™•ç†ç¬¬ä¸€æŸ±çš„ä¸Šé¢å…©å€‹ç›¤å­å°±å¯ä»¥äº†ã€‚<br>
 <br>
-¨º»ò¤»­Ó½Lªº±¡ªp©O¡H¤@¼Ë¡I­º¥ı¥²¶·¥Î»¼°j§¹¦¨¤U¹Ï¥ª¤W¦Ü¥k¤Uªº²¾°Ê¡G <br>
-<div style="text-align: center;"><img style="width: 377px; height: 137px;" alt="¦h¦âªe¤º¶ğ" title="¦h¦âªe¤º¶ğ" src="images/multiColorHanoiTower-4.jpg"></div>
+é‚£éº¼å…­å€‹ç›¤çš„æƒ…æ³å‘¢ï¼Ÿä¸€æ¨£ï¼é¦–å…ˆå¿…é ˆç”¨éè¿´å®Œæˆä¸‹åœ–å·¦ä¸Šè‡³å³ä¸‹çš„ç§»å‹•ï¼š <br>
+<div style="text-align: center;"><img style="width: 377px; height: 137px;" alt="å¤šè‰²æ²³å…§å¡”" title="å¤šè‰²æ²³å…§å¡”" src="images/multiColorHanoiTower-4.jpg"></div>
 <br>
-±µ¤U¨Ó³Ì©³¼hªº´N¤£¥ÎºŞ¥¦­Ì¤F¡A¦]¬°¥¦­Ì¤w¸g´N©w¦ì¡A¥u­n¦A³B²z²Ä¤@¬W¤W­±ªº¥|­Ó½L¤l´N¥i¥H¤F¡A³o¤S»P¤§«e¥u¦³¥|½Lªº±¡ªp¬Û¦P¡A±µ¤U¨Ó±z´Nª¾¹D¸Ó¦p¦ó¶i¦æ¸ÑÃD¤F¡AµL½×¬O¤K­Ó½L¡B¤Q­Ó½L¥H¤Wµ¥¡A³£¬O¥Î³o­ÓÆ[©À¨Ó¸ÑÃD¡C<br>
+æ¥ä¸‹ä¾†æœ€åº•å±¤çš„å°±ä¸ç”¨ç®¡å®ƒå€‘äº†ï¼Œå› ç‚ºå®ƒå€‘å·²ç¶“å°±å®šä½ï¼Œåªè¦å†è™•ç†ç¬¬ä¸€æŸ±ä¸Šé¢çš„å››å€‹ç›¤å­å°±å¯ä»¥äº†ï¼Œé€™åˆèˆ‡ä¹‹å‰åªæœ‰å››ç›¤çš„æƒ…æ³ç›¸åŒï¼Œæ¥ä¸‹ä¾†æ‚¨å°±çŸ¥é“è©²å¦‚ä½•é€²è¡Œè§£é¡Œäº†ï¼Œç„¡è«–æ˜¯å…«å€‹ç›¤ã€åå€‹ç›¤ä»¥ä¸Šç­‰ï¼Œéƒ½æ˜¯ç”¨é€™å€‹è§€å¿µä¾†è§£é¡Œã€‚<br>
 <br>
-¨º»ò¤T¦âªe¤º¶ğ©O¡H¤@¼Ë¡Aª½±µ¨Ó¬İ¤E­Ó½Lªº±¡ªp¡A­º¥ı¥²¶·§¹¦¨¤U¹Ïªº²¾°Êµ²ªG¡G<br>
-<div style="text-align: center;"><img style="width: 226px; height: 63px;" alt="¦h¦âªe¤º¶ğ" title="¦h¦âªe¤º¶ğ" src="images/multiColorHanoiTower-5.jpg"><br>
+é‚£éº¼ä¸‰è‰²æ²³å…§å¡”å‘¢ï¼Ÿä¸€æ¨£ï¼Œç›´æ¥ä¾†çœ‹ä¹å€‹ç›¤çš„æƒ…æ³ï¼Œé¦–å…ˆå¿…é ˆå®Œæˆä¸‹åœ–çš„ç§»å‹•çµæœï¼š<br>
+<div style="text-align: center;"><img style="width: 226px; height: 63px;" alt="å¤šè‰²æ²³å…§å¡”" title="å¤šè‰²æ²³å…§å¡”" src="images/multiColorHanoiTower-5.jpg"><br>
 </div>
 <br>
-±µ¤U¨Ó³Ì©³¨â¼hªº´N¤£¥ÎºŞ¥¦­Ì¤F¡A¦]¬°¥¦­Ì¤w¸g´N©w¦ì¡A¥u­n¦A³B²z²Ä¤@¬W¤W­±ªº¤T­Ó½L¤l´N¥i¥H¤F¡C<br>
-<div style="text-align: center;"><img style="width: 223px; height: 62px;" alt="¦h¦âªe¤º¶ğ" title="¦h¦âªe¤º¶ğ" src="images/multiColorHanoiTower-6.jpg"></div>
+æ¥ä¸‹ä¾†æœ€åº•å…©å±¤çš„å°±ä¸ç”¨ç®¡å®ƒå€‘äº†ï¼Œå› ç‚ºå®ƒå€‘å·²ç¶“å°±å®šä½ï¼Œåªè¦å†è™•ç†ç¬¬ä¸€æŸ±ä¸Šé¢çš„ä¸‰å€‹ç›¤å­å°±å¯ä»¥äº†ã€‚<br>
+<div style="text-align: center;"><img style="width: 223px; height: 62px;" alt="å¤šè‰²æ²³å…§å¡”" title="å¤šè‰²æ²³å…§å¡”" src="images/multiColorHanoiTower-6.jpg"></div>
 <br>
-±z¤]¥i¥H¬İ¬İ <a href="http://obelix.ee.duth.gr/%7Eapostolo/TowersOfHanoi/index.html">Towers of Hanoi Page</a> ¤¤¦³Ãö©óªe¤º¶ğªº°Q½×¡C<br>
-<h2>&nbsp;¹ê§@</h2>
-¥H¤UJavaºtºâ¹ê¨Ò¥Ñ <a href="http://www.javaworld.com.tw">http://www.javaworld.com.tw</a> ªº <a href="http://www.javaworld.com.tw/jute/user/info?uid=3056">T5555</a> ´£¨Ñ¡A·PÁÂ¥Lªº¨ó§U¡A§Ú®Ú¾Ú¥Lªº¹ê¨Ò¡AÂà´«¬°C»y¨¥ªº¹ê§@³¡¥÷¡A±z¥i¥H°Ñ¦Ò³o­Ó <a href="http://www.javaworld.com.tw/jute/post/view?bid=29&amp;id=81268&amp;tpg=1&amp;ppg=1&amp;sty=0&amp;age=0#81268">°Q½×¦ê</a> ¦³Ãö©óªe¤º¶ğªº°Q½×¡C<br>
+æ‚¨ä¹Ÿå¯ä»¥çœ‹çœ‹ <a href="http://obelix.ee.duth.gr/%7Eapostolo/TowersOfHanoi/index.html">Towers of Hanoi Page</a> ä¸­æœ‰é—œæ–¼æ²³å…§å¡”çš„è¨è«–ã€‚<br>
+<h2>&nbsp;å¯¦ä½œ</h2>
+ä»¥ä¸‹Javaæ¼”ç®—å¯¦ä¾‹ç”± <a href="http://www.javaworld.com.tw">http://www.javaworld.com.tw</a> çš„ <a href="http://www.javaworld.com.tw/jute/user/info?uid=3056">T5555</a> æä¾›ï¼Œæ„Ÿè¬ä»–çš„å”åŠ©ï¼Œæˆ‘æ ¹æ“šä»–çš„å¯¦ä¾‹ï¼Œè½‰æ›ç‚ºCèªè¨€çš„å¯¦ä½œéƒ¨ä»½ï¼Œæ‚¨å¯ä»¥åƒè€ƒé€™å€‹ <a href="http://www.javaworld.com.tw/jute/post/view?bid=29&amp;id=81268&amp;tpg=1&amp;ppg=1&amp;sty=0&amp;age=0#81268">è¨è«–ä¸²</a> æœ‰é—œæ–¼æ²³å…§å¡”çš„è¨è«–ã€‚<br>
 <br>
 <ul>
-  <li> Âù¦âªe¤º¶ğ C ¹ê§@
+  <li> é›™è‰²æ²³å…§å¡” C å¯¦ä½œ
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt;<br><br>void hanoi(int disks, char source, char temp, char target) {<br>    if (disks == 1) {<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", source, target);<br>    } else {<br>        hanoi(disks-1, source, target, temp);<br>        hanoi(1, source, temp, target);<br>        hanoi(disks-1, temp, source, target);<br>    }<br>}<br><br>void hanoi2colors(int disks) {<br>    char source = 'A';<br>    char temp = 'B';<br>    char target = 'C';<br>    int i;<br>    for(i = disks / 2; i &gt; 1; i--) {<br>        hanoi(i-1, source, temp, target);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br>        hanoi(i-1, target, temp, source);<br>        printf("move disk from %c to %c\n", temp, target);<br>    }<br>    printf("move disk from %c to %c\n", source, temp);<br>    printf("move disk from %c to %c\n", source, target);<br>}<br><br>int main() {<br>    int n;<br>    printf("½Ğ¿é¤J½L¼Æ¡G");<br>    scanf("%d", &amp;n);<br><br>    hanoi2colors(n);<br><br>    return 0;<br>} <br></pre>
+<pre>#include &lt;stdio.h&gt;<br><br>void hanoi(int disks, char source, char temp, char target) {<br>    if (disks == 1) {<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", source, target);<br>    } else {<br>        hanoi(disks-1, source, target, temp);<br>        hanoi(1, source, temp, target);<br>        hanoi(disks-1, temp, source, target);<br>    }<br>}<br><br>void hanoi2colors(int disks) {<br>    char source = 'A';<br>    char temp = 'B';<br>    char target = 'C';<br>    int i;<br>    for(i = disks / 2; i &gt; 1; i--) {<br>        hanoi(i-1, source, temp, target);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br>        hanoi(i-1, target, temp, source);<br>        printf("move disk from %c to %c\n", temp, target);<br>    }<br>    printf("move disk from %c to %c\n", source, temp);<br>    printf("move disk from %c to %c\n", source, target);<br>}<br><br>int main() {<br>    int n;<br>    printf("è«‹è¼¸å…¥ç›¤æ•¸ï¼š");<br>    scanf("%d", &amp;n);<br><br>    hanoi2colors(n);<br><br>    return 0;<br>} <br></pre>
 
 <br>
 
 <ul>
-  <li> ¤T¦âªe¤º¶ğ C ¹ê§@
+  <li> ä¸‰è‰²æ²³å…§å¡” C å¯¦ä½œ
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt;<br><br>void hanoi(int disks, char source, char temp, char target) {<br>    if (disks == 1) {<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", source, target);<br>    } else {<br>        hanoi(disks-1, source, target, temp);<br>        hanoi(1, source, temp, target);<br>        hanoi(disks-1, temp, source, target);<br>    }<br>}<br><br>void hanoi3colors(int disks) {<br>    char source = 'A';<br>    char temp = 'B';<br>    char target = 'C';<br>    int i;<br><br>    if(disks == 3) {<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", temp, target);<br>        printf("move disk from %c to %c\n", temp, source);<br>        printf("move disk from %c to %c\n", target, temp);;<br>    }<br>    else {<br>        hanoi(disks/3-1, source, temp, target);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br><br>        hanoi(disks/3-1, target, temp, source);<br>        printf("move disk from %c to %c\n", temp, target);<br>        printf("move disk from %c to %c\n", temp, target);<br>        printf("move disk from %c to %c\n", temp, target);<br><br>        hanoi(disks/3-1, source, target, temp);<br>        printf("move disk from %c to %c\n", target, source);<br>        printf("move disk from %c to %c\n", target, source);<br><br>        hanoi(disks/3-1, temp, source, target);<br>        printf("move disk from %c to %c\n", source, temp);<br>        <br>        for (i = disks / 3 - 1; i &gt; 0; i--) {<br>            if (i&gt;1) {<br>                hanoi(i-1, target, source, temp);<br>            }<br><br>            printf("move disk from %c to %c\n",<br>                                 target, source);<br>            printf("move disk from %c to %c\n",<br>                                 target, source);<br><br>            if (i&gt;1) {<br>                hanoi(i-1, temp, source, target);<br>            }<br>            printf("move disk from %c to %c\n", <br>                                   source, temp);<br>        }<br>    }<br>}<br><br>int main() {<br>    int n;<br>    printf("½Ğ¿é¤J½L¼Æ¡G");<br>    scanf("%d", &amp;n);<br><br>    hanoi3colors(n);<br><br>    return 0;<br>} <br></pre>
+<pre>#include &lt;stdio.h&gt;<br><br>void hanoi(int disks, char source, char temp, char target) {<br>    if (disks == 1) {<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", source, target);<br>    } else {<br>        hanoi(disks-1, source, target, temp);<br>        hanoi(1, source, temp, target);<br>        hanoi(disks-1, temp, source, target);<br>    }<br>}<br><br>void hanoi3colors(int disks) {<br>    char source = 'A';<br>    char temp = 'B';<br>    char target = 'C';<br>    int i;<br><br>    if(disks == 3) {<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, target);<br>        printf("move disk from %c to %c\n", temp, target);<br>        printf("move disk from %c to %c\n", temp, source);<br>        printf("move disk from %c to %c\n", target, temp);;<br>    }<br>    else {<br>        hanoi(disks/3-1, source, temp, target);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br>        printf("move disk from %c to %c\n", source, temp);<br><br>        hanoi(disks/3-1, target, temp, source);<br>        printf("move disk from %c to %c\n", temp, target);<br>        printf("move disk from %c to %c\n", temp, target);<br>        printf("move disk from %c to %c\n", temp, target);<br><br>        hanoi(disks/3-1, source, target, temp);<br>        printf("move disk from %c to %c\n", target, source);<br>        printf("move disk from %c to %c\n", target, source);<br><br>        hanoi(disks/3-1, temp, source, target);<br>        printf("move disk from %c to %c\n", source, temp);<br>        <br>        for (i = disks / 3 - 1; i &gt; 0; i--) {<br>            if (i&gt;1) {<br>                hanoi(i-1, target, source, temp);<br>            }<br><br>            printf("move disk from %c to %c\n",<br>                                 target, source);<br>            printf("move disk from %c to %c\n",<br>                                 target, source);<br><br>            if (i&gt;1) {<br>                hanoi(i-1, temp, source, target);<br>            }<br>            printf("move disk from %c to %c\n", <br>                                   source, temp);<br>        }<br>    }<br>}<br><br>int main() {<br>    int n;<br>    printf("è«‹è¼¸å…¥ç›¤æ•¸ï¼š");<br>    scanf("%d", &amp;n);<br><br>    hanoi3colors(n);<br><br>    return 0;<br>} <br></pre>
 
 <br>
 
 <ul>
-  <li> Âù¦âªe¤º¶ğ Java ¹ê§@
+  <li> é›™è‰²æ²³å…§å¡” Java å¯¦ä½œ
   </li>
 </ul>
 
@@ -121,7 +121,7 @@ Gossip@caterpillar</a></h3>
 <br>
 
 <ul>
-  <li> ¤T¦âªe¤º¶ğ Java ¹ê§@
+  <li> ä¸‰è‰²æ²³å…§å¡” Java å¯¦ä½œ
   </li>
 </ul>
 
