--- a/AlgorithmGossip/NOfM.htm
+++ b/AlgorithmGossip/NOfM.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>m¤¸¯À¶°¦Xªºn­Ó¤¸¯À¤l¶°</title>
+  <title>må…ƒç´ é›†åˆçš„nå€‹å…ƒç´ å­é›†</title>
 </head>
 
 
@@ -61,49 +61,49 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;m¤¸¯À¶°¦Xªºn­Ó¤¸¯À¤l¶°</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;må…ƒç´ é›†åˆçš„nå€‹å…ƒç´ å­é›†</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-°²³]¦³­Ó¶°¦X¾Ö¦³m­Ó¤¸¯À¡A¥ô·Nªº±q¶°¦X¤¤¨ú¥Xn­Ó¤¸¯À¡A«h³on­Ó¤¸¯À©Ò§Î¦¨ªº¥i¯à¤l¶°¦³¨º¨Ç¡H<br>
+å‡è¨­æœ‰å€‹é›†åˆæ“æœ‰må€‹å…ƒç´ ï¼Œä»»æ„çš„å¾é›†åˆä¸­å–å‡ºnå€‹å…ƒç´ ï¼Œå‰‡é€™nå€‹å…ƒç´ æ‰€å½¢æˆçš„å¯èƒ½å­é›†æœ‰é‚£äº›ï¼Ÿ<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-°²³]¦³5­Ó¤¸¯Àªº¶°ÂI¡A¨ú¥X3­Ó¤¸¯Àªº¥i¯à¤l¶°¦p¤U¡G<br>
+å‡è¨­æœ‰5å€‹å…ƒç´ çš„é›†é»ï¼Œå–å‡º3å€‹å…ƒç´ çš„å¯èƒ½å­é›†å¦‚ä¸‹ï¼š<br>
 
-<div style="margin-left: 40px; font-family: Courier New,Courier,monospace;"><span style="font-weight: bold;">{1 2 3}¡B{1 2 4 }¡B{1 2 5}¡B{1 3 4}¡B{1 3 5}¡B{1 4 5}¡B{2 3 4}¡B{2 3 5}¡B{2 4 5}¡B{3 4 5}</span><br>
+<div style="margin-left: 40px; font-family: Courier New,Courier,monospace;"><span style="font-weight: bold;">{1 2 3}ã€{1 2 4 }ã€{1 2 5}ã€{1 3 4}ã€{1 3 5}ã€{1 4 5}ã€{2 3 4}ã€{2 3 5}ã€{2 4 5}ã€{3 4 5}</span><br>
 
 </div>
 
 <br>
 
-³o¨Ç¤l¶°¤w¸g¨Ï¥Î¦r¨å¶¶§Ç±Æ¦C¡A¦p¦¹¤~¥i¥HÆ[¹î¥X¤@¨Ç³W«h¡G<br>
+é€™äº›å­é›†å·²ç¶“ä½¿ç”¨å­—å…¸é †åºæ’åˆ—ï¼Œå¦‚æ­¤æ‰å¯ä»¥è§€å¯Ÿå‡ºä¸€äº›è¦å‰‡ï¼š<br>
 
 <ol>
 
-  <li>¦pªG³Ì¥k¤@­Ó¤¸¯À¤p©óm¡A«h¦p¦P½X¿ö¤@¼Ëªº¤£Â_¥[1</li>
+  <li>å¦‚æœæœ€å³ä¸€å€‹å…ƒç´ å°æ–¼mï¼Œå‰‡å¦‚åŒç¢¼éŒ¶ä¸€æ¨£çš„ä¸æ–·åŠ 1</li>
 
-  <li>¦pªG¥kÃä¤@¦ì¤w¦Ü³Ì¤j­È¡A«h¥[1ªº¦ì¸m©¹¥ª²¾</li>
+  <li>å¦‚æœå³é‚Šä¸€ä½å·²è‡³æœ€å¤§å€¼ï¼Œå‰‡åŠ 1çš„ä½ç½®å¾€å·¦ç§»</li>
 
-  <li>¨C¦¸¥[1ªº¦ì¸m©¹¥ª²¾«á¡A¥²¶·­«·s½Õ¾ã¥kÃäªº¤¸¯À¬°»¼´î¶¶§Ç</li>
+  <li>æ¯æ¬¡åŠ 1çš„ä½ç½®å¾€å·¦ç§»å¾Œï¼Œå¿…é ˆé‡æ–°èª¿æ•´å³é‚Šçš„å…ƒç´ ç‚ºéæ¸›é †åº</li>
 
 </ol>
 
 <br>
 
-©Ò¥HÃöÁäÂI´N¦b©ó­ş¤@­Ó¦ì¸m¥²¶·¶i¦æ¥[1ªº°Ê§@¡A¨ì©³¬O³Ì¥k¤@­Ó¦ì¸m­n¥[1¡HÁÙ¬O¨ä¥¦ªº¦ì¸m¡H<br>
+æ‰€ä»¥é—œéµé»å°±åœ¨æ–¼å“ªä¸€å€‹ä½ç½®å¿…é ˆé€²è¡ŒåŠ 1çš„å‹•ä½œï¼Œåˆ°åº•æ˜¯æœ€å³ä¸€å€‹ä½ç½®è¦åŠ 1ï¼Ÿé‚„æ˜¯å…¶å®ƒçš„ä½ç½®ï¼Ÿ<br>
 
 <br>
 
-¦b¹ê»Ú¼¶¼gµ{¦¡®É¡A¥i¥H¨Ï¥Î¤@­ÓÅÜ¼Æpositon¨Ó°O¿ı¥[1ªº¦ì¸m¡Apositionªºªì­È³]©w¬°n-1¡A¦]¬°§Ú­Ì­n¨Ï¥Î°}¦C¡A¦Ó³Ì¥kÃäªº¯Á¤Ş­È¬°³Ì¤j
-ªºn-1¡A¦bposition¦ì¸mªº­È­Y¤p©óm´N¤£Â_¥[1¡A¦pªG¤j©óm¤F¡Aposition´N´î1¡A¤]´N¬O©¹¥ª²¾¤@­Ó¦ì¸m¡F¥Ñ©ó¦ì¸m¥ª²¾«á¡A¥kÃäªº¤¸¯À·|
-¸g¹L½Õ¾ã¡A©Ò¥H§Ú­Ì¥²¶·ÀË¬d³Ì¥kÃäªº¤¸¯À¬O§_¤p©óm¡A¦pªG¬O¡A«hposition½Õ¾ã¦^n-1¡A¦pªG¤£¬O¡A«hpositonºû«ù¤£ÅÜ¡C <br>
+åœ¨å¯¦éš›æ’°å¯«ç¨‹å¼æ™‚ï¼Œå¯ä»¥ä½¿ç”¨ä¸€å€‹è®Šæ•¸positonä¾†è¨˜éŒ„åŠ 1çš„ä½ç½®ï¼Œpositionçš„åˆå€¼è¨­å®šç‚ºn-1ï¼Œå› ç‚ºæˆ‘å€‘è¦ä½¿ç”¨é™£åˆ—ï¼Œè€Œæœ€å³é‚Šçš„ç´¢å¼•å€¼ç‚ºæœ€å¤§
+çš„n-1ï¼Œåœ¨positionä½ç½®çš„å€¼è‹¥å°æ–¼må°±ä¸æ–·åŠ 1ï¼Œå¦‚æœå¤§æ–¼mäº†ï¼Œpositionå°±æ¸›1ï¼Œä¹Ÿå°±æ˜¯å¾€å·¦ç§»ä¸€å€‹ä½ç½®ï¼›ç”±æ–¼ä½ç½®å·¦ç§»å¾Œï¼Œå³é‚Šçš„å…ƒç´ æœƒ
+ç¶“éèª¿æ•´ï¼Œæ‰€ä»¥æˆ‘å€‘å¿…é ˆæª¢æŸ¥æœ€å³é‚Šçš„å…ƒç´ æ˜¯å¦å°æ–¼mï¼Œå¦‚æœæ˜¯ï¼Œå‰‡positionèª¿æ•´å›n-1ï¼Œå¦‚æœä¸æ˜¯ï¼Œå‰‡positonç¶­æŒä¸è®Šã€‚ <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -114,7 +114,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAX 20 <br><br>int main(void) { <br>    int set[MAX]; <br>    int m, n, position; <br>    int i; <br><br>    printf("¿é¤J¶°¦X­Ó¼Æ m¡G"); <br>    scanf("%d", &amp;m); <br>    printf("¿é¤J¨ú¥X¤¸¯À n¡G"); <br>    scanf("%d", &amp;n); <br><br>    for(i = 0; i &lt; n; i++) <br>        set[i] = i + 1; <br><br>    // Åã¥Ü²Ä¤@­Ó¶°¦X <br>    for(i = 0; i &lt; n; i++) <br>        printf("%d ", set[i]); <br>    putchar('\n'); <br>    <br>    position = n - 1; <br><br>    while(1) { <br>        if(set[n-1] == m) <br>            position--; <br>        else <br>            position = n - 1; <br><br>        set[position]++; <br><br>        // ½Õ¾ã¥kÃä¤¸¯À <br>        for(i = position + 1; i &lt; n; i++) <br>            set[i] = set[i-1] + 1; <br><br>        for(i = 0; i &lt; n; i++) <br>            printf("%d ", set[i]); <br>        putchar('\n'); <br><br>        if(set[0] &gt;= m - n + 1) <br>            break; <br>    } <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAX 20 <br><br>int main(void) { <br>    int set[MAX]; <br>    int m, n, position; <br>    int i; <br><br>    printf("è¼¸å…¥é›†åˆå€‹æ•¸ mï¼š"); <br>    scanf("%d", &amp;m); <br>    printf("è¼¸å…¥å–å‡ºå…ƒç´  nï¼š"); <br>    scanf("%d", &amp;n); <br><br>    for(i = 0; i &lt; n; i++) <br>        set[i] = i + 1; <br><br>    // é¡¯ç¤ºç¬¬ä¸€å€‹é›†åˆ <br>    for(i = 0; i &lt; n; i++) <br>        printf("%d ", set[i]); <br>    putchar('\n'); <br>    <br>    position = n - 1; <br><br>    while(1) { <br>        if(set[n-1] == m) <br>            position--; <br>        else <br>            position = n - 1; <br><br>        set[position]++; <br><br>        // èª¿æ•´å³é‚Šå…ƒç´  <br>        for(i = position + 1; i &lt; n; i++) <br>            set[i] = set[i-1] + 1; <br><br>        for(i = 0; i &lt; n; i++) <br>            printf("%d ", set[i]); <br>        putchar('\n'); <br><br>        if(set[0] &gt;= m - n + 1) <br>            break; <br>    } <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
@@ -128,7 +128,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class NofM {<br>    private int m;<br>    private int[] set;<br>    private boolean first;<br>    private int position;<br>    <br>    public NofM(int n, int m) {<br>        this.m = m;<br>        first = true;<br>        position = n - 1; <br><br>        set = new int[n];<br>        for(int i = 0; i &lt; n; i++) <br>            set[i] = i + 1; <br>    }<br>    <br>    public boolean hasNext() {<br>        return set[0] &lt; m - set.length + 1;<br>    }<br>    <br>    public int[] next() {<br>        if(first) {<br>            first = false;<br>            return set;<br>        }<br>        <br>        if(set[set.length-1] == m) <br>            position--; <br>        else <br>            position = set.length - 1; <br><br>        set[position]++; <br><br>        // ½Õ¾ã¥kÃä¤¸¯À <br>        for(int i = position + 1; i &lt; set.length; i++) <br>            set[i] = set[i-1] + 1;<br>        <br>        return set;<br>    }<br>    <br>    public static void main(String[] args) {<br>        NofM nOfm = new NofM(3, 5);<br>        <br>        while(nOfm.hasNext()) {<br>            int[] set = nOfm.next();<br>            for(int i = 0; i &lt; set.length; i++) {<br>                System.out.print(set[i]);   <br>            }<br>            System.out.println();<br>        }<br>    }<br>}</pre>
+<pre>public class NofM {<br>    private int m;<br>    private int[] set;<br>    private boolean first;<br>    private int position;<br>    <br>    public NofM(int n, int m) {<br>        this.m = m;<br>        first = true;<br>        position = n - 1; <br><br>        set = new int[n];<br>        for(int i = 0; i &lt; n; i++) <br>            set[i] = i + 1; <br>    }<br>    <br>    public boolean hasNext() {<br>        return set[0] &lt; m - set.length + 1;<br>    }<br>    <br>    public int[] next() {<br>        if(first) {<br>            first = false;<br>            return set;<br>        }<br>        <br>        if(set[set.length-1] == m) <br>            position--; <br>        else <br>            position = set.length - 1; <br><br>        set[position]++; <br><br>        // èª¿æ•´å³é‚Šå…ƒç´  <br>        for(int i = position + 1; i &lt; set.length; i++) <br>            set[i] = set[i-1] + 1;<br>        <br>        return set;<br>    }<br>    <br>    public static void main(String[] args) {<br>        NofM nOfm = new NofM(3, 5);<br>        <br>        while(nOfm.hasNext()) {<br>            int[] set = nOfm.next();<br>            for(int i = 0; i &lt; set.length; i++) {<br>                System.out.print(set[i]);   <br>            }<br>            System.out.println();<br>        }<br>    }<br>}</pre>
 
 <br>
 
