--- a/AlgorithmGossip/OddArray.htm
+++ b/AlgorithmGossip/OddArray.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>╘_╪фе]╓Х╟}</title>
+  <title>Е╔┤Ф∙╦И╜■Ф√╧И≥ё</title>
 </head>
 
 
@@ -51,26 +51,26 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ╘_╪фе]╓Х╟}</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: Е╔┤Ф∙╦И╜■Ф√╧И≥ё</a></h1>
 
 
 
 
-<h2>╩║╘З</h2>
-╠N1╗Лn(╛╟╘_╪ф)╙╨╪ф╕r╠ф╕C╕bnxn╙╨╓Х╟}╓W║A╔B╕U╕Ф║B╕U╕C╩P╕U╧О╗╓╫u╙╨╘M╔╡╤╥╛ш╕P║A╕p╓U╘р╔э║G<br>
+<h2>Х╙╙Ф≤▌</h2>
+Е╟┤1Е┬╟n(Г┌╨Е╔┤Ф∙╦)Г └Ф∙╦Е╜≈Ф▌▓Е┬≈Е°╗nxnГ └Ф√╧И≥ёД╦┼О╪▄Д╦■Е░└Х║▄Ц─│Е░└Е┬≈Х┬┤Е░└Е╟█Х╖▓Г╥ Г └Е▓▄Е©┘И═┬Г⌡╦Е░▄О╪▄Е╕┌Д╦▀Ф┴─Г╓╨О╪ <br>
 
-<div style="text-align: center;"><img style="width: 115px; height: 79px;" alt="╘_╪фе]╓Х╟}" title="╘_╪фе]╓Х╟}" src="images/oddArray-1.jpg"><br>
+<div style="text-align: center;"><img style="width: 115px; height: 79px;" alt="Е╔┤Ф∙╦И╜■Ф√╧И≥ё" title="Е╔┤Ф∙╦И╜■Ф√╧И≥ё" src="images/oddArray-1.jpg"><br>
 <div style="text-align: left;">
-<h2>&nbsp;╦я╙k</h2>
+<h2>&nbsp;Х╖ёФЁ∙</h2>
 </div>
-<div style="text-align: left;">╤Яе]ЁN╓Х╟}╙╨╓Х╙k╔H╘_╪фЁл╛╟б╡ЁФ║A╡д╓@╜с╪ф╕r╘Я╕b╡д╓@╕Ф╡д╓@╕C╙╨╔©╓╓╔║║A╣M╚А╕V╔k(╔╙)╓W╤Я║A╕p╙G╔k(╔╙)╓W╓w╕Ё╪ф╕r║A╚h╕V╓U╤Я║A╕p╓U╧о╘р╔э║G <br>
-<div style="text-align: center;"><img style="width: 198px; height: 194px;" alt="╘_╪фе]╓Х╟}" title="╘_╪фе]╓Х╟}" src="images/oddArray-2.jpg"><br>
+<div style="text-align: left;">Е║╚И╜■Х║⌠Ф√╧И≥ёГ └Ф√╧ФЁ∙Д╩╔Е╔┤Ф∙╦Ф°─Г┌╨Г╟║Е√╝О╪▄Г╛╛Д╦─Е─▀Ф∙╦Е╜≈Ф■╬Е°╗Г╛╛Д╦─Х║▄Г╛╛Д╦─Е┬≈Г └Ф╜ёД╦╜Е╓╝О╪▄Г└╤Е╬▄Е░▒Е▐Ё(Е╥╕)Д╦┼Е║╚О╪▄Е╕┌Ф·°Е▐Ё(Е╥╕)Д╦┼Е╥╡Ф°┴Ф∙╦Е╜≈О╪▄Е┴┤Е░▒Д╦▀Е║╚О╪▄Е╕┌Д╦▀Е°√Ф┴─Г╓╨О╪  <br>
+<div style="text-align: center;"><img style="width: 198px; height: 194px;" alt="Е╔┤Ф∙╦И╜■Ф√╧И≥ё" title="Е╔┤Ф∙╦И╜■Ф√╧И≥ё" src="images/oddArray-2.jpg"><br>
 </div>
 </div>
 </div>
-╓@╞К╣{╕║╩y╗╔╙╨╟}╕C╞а╓ч╕h╔я0╤}╘l║A╛╟╓F╜p╨Б╓Х╚K║A╖з╜л╖Q╔н╞а╓ч1╗Лn╙╨Ё║╔В║A╕с╕b╜p╨Б╛O╕V╔k(╔╙)╓W╘н╕V╓U╝и║A╖з╜л╔i╔H╠N╞а╓ч╜х╟ё╔Hn╜х║A╕p╙G╠o╗Л╬l╪ф╛╟1╢N╕V╓U║A╖_╚h╢N╘╧╔k(╔╙)╓W║A╜Л╡z╚эб╡ЁФ║A╛щ╛щ╛O╓ё╛O╓w╦g╕b╕P╓@╕C╓Wб╤╓@╟И╢N╧О╓F║C <br>
+Д╦─Х┬╛Г╗▀Е╪▐Х╙·Х╗─Г └И≥ёЕ┬≈Г╢╒Е╪∙Е╓ Г■╠0И√▀Е╖▀О╪▄Г┌╨Д╨├Х╗┬Г╝≈Ф√╧Д╬©О╪▄Ф┬▒Е─▒Е┬╘Г■╗Г╢╒Е╪∙1Е┬╟nГ └И┐╗Д╩╫О╪▄Х─▄Е°╗Х╗┬Г╝≈Ф≤╞Е░▒Е▐Ё(Е╥╕)Д╦┼Ф┬√Е░▒Д╦▀Ф≥┌О╪▄Ф┬▒Е─▒Е▐╞Д╩╔Е╟┤Г╢╒Е╪∙Е─╪И≥╓Д╩╔nЕ─╪О╪▄Е╕┌Ф·°Е╬≈Е┬╟И╓≤Ф∙╦Г┌╨1Е╟╠Е░▒Д╦▀О╪▄Е░╕Е┴┤Е╟╠Е╬─Е▐Ё(Е╥╕)Д╦┼О╪▄Е▌÷Г░├Е╬┬Г╟║Е√╝О╪▄Г°▀Г°▀Ф≤╞Д╦█Ф≤╞Е╥╡Г╤⌠Е°╗Е░▄Д╦─Е┬≈Д╦┼Г╧·Д╦─Е°┬Е╟╠Е╟█Д╨├Ц─┌ <br>
 <br>
-<h2> ╧Й╖@</h2>
+<h2> Е╞╕Д╫°</h2>
 
 <ul>
   <li> C
